<resources>
    <string name="app_name">运动助手</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>

    <string name="home">Home</string>
    <string name="sports">运动</string>
    <string name="diet">饮食</string>
    <string name="dynamic">动态</string>
    <string name="me">我</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phone">手机号码</string>
    <string name="password">密码</string>

    <string name="input_phone_hint">手机号码…</string>
    <string name="input_password_hint">密码…</string>
    <string name="input_password_hint_confirm">确认密码…</string>
    <string name="input_nickname">昵称…</string>
    <string name="input_height">身高…</string>
    <string name="input_weight">体重…</string>
    <string name="input_birthday">生日…</string>
    <string name="input_gender">性别…</string>
    <string name="input_urgent_phone">紧急联系手机号…</string>
    <string name="choose_head_photo">选择图片</string>

    <string name="planning">规划</string>
    <string name="walk">散步</string>
    <string name="run">跑步</string>
    <string name="riding">骑行</string>
    <string name="roller_skating">轮滑</string>
    <string name="walk_ing">散步中…</string>
    <string name="run_ing">跑步中…</string>
    <string name="riding_ing">骑行中…</string>
    <string name="roller_skating_ing">轮滑中…</string>
    <string name="search">搜索</string>
    <string name="in">在</string>
    <string name="sports_suggestion_tip">分钟有益身体健康哦</string>

    <string name="target_kilometers">目标公里数</string>
    <string name="total_kilometers">总公里数</string>
    <string name="kilometers">公里</string>

    <string name="start">开始</string>
    <string name="next_step">下一步</string>
    <string name="nick_name">昵称</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="birthday">生日</string>
    <string name="gender">性别</string>
    <string name="urgent_phone_tips">为保障您的安全，请输入您的紧急联系人的号码…</string>
    <string name="urgent_phone">紧急联系人</string>

    <string name="gps_can_no_use">手机定位不可用，请手动去设置权限</string>
    <string name="gps_word">GPS定位中…</string>
    <string name="gps_calculate">GPS计算中…</string>
    <string name="gps_no_signal">GPS无信号…</string>
    <string name="calculate_by_pedometer">用计步器计算中</string>

    <string name="speed">速度</string>
    <string name="used_time">用时</string>
    <string name="energy">能量</string>
    <string name="carry_on">继续</string>
    <string name="pause">暂停</string>
    <string name="end">结束</string>

    <string name="featured">精选</string>
    <string name="follow">关注</string>
    <string name="recommend">推荐</string>
    <string name="sports_achievement">运动成就</string>
    <string name="personal_data">个人资料</string>
    <string name="publish_forum">发布论坛</string>
    <string name="setting">设置</string>
    <string name="setting_permission">权限设置</string>
    <string name="cache">缓存</string>
    <string name="about">关于</string>
    <string name="feedback">意见反馈</string>
    <string name="version">版本</string>
    <string name="backstage_protected">后台保护</string>
    <string name="avoid_sleeping">防止睡眠</string>
    <string name="sign_out">退出</string>
    <string name="default_version">1.0.0</string>
    <string name="send_feedback_ing">正在反馈中…</string>
    <string name="send_feedback_success">反馈成功</string>
    <string name="send_feedback_fail">反馈失败，请稍后重试</string>

    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="confidentiality">保密</string>
    <string name="photo_need_read_permission">读取照片需要权限，请到设置里进行设置</string>

    <string name="error_phone_format">手机号格式错误</string>
    <string name="error_password_confirm">两次输入的密码不一致</string>
    <string name="error_password_format">密码位数至少为六位</string>
    <string name="error_nick_name">昵称不能为空</string>
    <string name="error_height">身高输入不合法</string>
    <string name="error_weight">体重输入不合法</string>
    <string name="error_birthday">请选择生日</string>
    <string name="error_gender">请选择性别</string>
    <string name="error_urgent_phone">紧急联系人联系方式格式有误</string>

    <string name="register_success">注册成功，现在去登录？</string>
    <string name="register_has">您所输入的账号已注册，直接去登录？</string>
    <string name="register_fail">注册失败，请稍后重试</string>
    <string name="register_ing">注册中…</string>

    <string name="login_ing">登录中…</string>
    <string name="login_success">登录成功</string>

    <string name="dynamic_count">条动态</string>
    <string name="head_photo">头像</string>

    <string name="change_info_ing">修改信息中…</string>
    <string name="change_info_fail">修改信息失败，请稍后重试</string>
    <string name="change_info_success">修改信息成功</string>

    <string name="get_update_info_ing">更新信息中…</string>
    <string name="get_update_info_fail">更新信息失败</string>
    <string name="get_update_info_success">更新信息成功</string>

    <string name="get_sports_planning_suggestion_ing">获取运动建议中…</string>
    <string name="get_sports_planning_suggestion_fail">获取运动建议失败，请稍后重试</string>
    <string name="get_sports_planning_suggestion_success">获取运动建议成功</string>

    <string name="suggestion">建议</string>
    <string name="suggest_time">建议时长: </string>
    <string name="hour">hour</string>
    <string name="min">min</string>
    <string name="s">s</string>
    <string name="start_time">开始时间: </string>
    <string name="suggest_tips">温馨提示：根据系统建议的时间点并选择建议的运动种类来运动相应的时长是非常有益于您的健康噢，系统专门为您的健康量身定制的呢</string>

    <string name="get_forum_ing">获取动态中…</string>
    <string name="get_forum_success">获取动态成功</string>
    <string name="get_forum_fail">获取动态失败，请稍后重试</string>
    <string name="publish_forum_ing">发布动态中…</string>
    <string name="publish_forum_success">发布动态成功</string>
    <string name="publish_forum_fail">发布动态失败，请稍后重试</string>
    <string name="comment_forum_ing">评论动态中…</string>
    <string name="comment_forum_success">评论动态成功</string>
    <string name="comment_forum_fail">评论动态失败，请稍后重试</string>
    <string name="please_input_your_comment">请输入您的评论…</string>
    <string name="empty_content">内容不能为空哦</string>
    <string name="send">发送</string>
    <string name="reply">回复</string>

    <string name="hint_publish_forum">你想跟大家说点什么呢…</string>
    <string name="info_outdated">登录过时，请重新登录</string>

    <string name="sports_ing">运动中…</string>
    <string name="notification_text">速度 : %1$s, 路程 : %2$s.</string>
    <string name="notification_id" translatable="false">Speed_meter_is_an_id</string>
    <string name="request_location_permission">为了能正常使用运动功能，应用需要开启定位权限，现在去开启？</string>
    <string name="started_time">00:00:00</string>
    <string name="speed_util">小时/公里</string>
    <string name="zero">0</string>
    <string name="finish_target_distance">您已经完成目标，继续加油哦</string>
    <string name="alarm">警告</string>
    <string name="please_slow_down">建议降低速度运动哦</string>
    <string name="finish_time_suggested">您今天运动的量已经足了呢</string>

    <string name="upload_sports_data_ing">上传运动数据中…</string>
    <string name="upload_sports_data_success">上传运动数据成功</string>
    <string name="upload_sports_data_fail">上传运动数据失败，请稍后重试</string>

    <string name="set_target">目标设定</string>
    <string name="set_target_distance_title">请设置您的目标运动公里数</string>
    <string name="walking">WALKING</string>
    <string name="running">RUNNING</string>
    <string name="ridding">RIDDING</string>
    <string name="roller_skating_">SKATING</string>
    <string name="start_walk">开始散步</string>
    <string name="start_run">开始跑步</string>
    <string name="start_ride">开始骑行</string>
    <string name="start_skating">开始滑行</string>
    <string name="no_sports_data">你还没有有效的运动数据，暂时不可以上传到服务器呢</string>

    <string name="author">作者：攀登者</string>
    <string name="email">邮箱：zhuangjinkun@bigo.sg</string>
    <string name="blog">博客：https://www.jianshu.com/u/feee9c64aedf</string>
    <string name="powered">powered by zhuangjinkun</string>

    <string name="make_sure_sign_out">您确定退出当前应用吗？</string>
    <string name="feedback_hint">您想吐槽点什么呢？</string>
    <string name="contact">联系方式</string>
    <string name="contact_error">联系人格式有误</string>
    <string name="ranking_version">排行版</string>
    <string name="get_ranking_ing">获取排行版中…</string>
    <string name="get_ranking_fail">获取排行版失败</string>
    <string name="get_ranking_success">获取排行版成功</string>

    <string name="get_sports_data_ing">获取运动数据中…</string>
    <string name="get_sports_data_fail">获取运功数据失败</string>
    <string name="get_sports_data_success">获取运动数据成功</string>
    <string name="sports_a_content">您在 %s %s 了 %s 公里，用时 %s 分钟，最大速度为 %s 公里/小时</string>

    <string name="sports_detail">运动详情</string>
    <string name="instantaneous_speed">瞬时速度</string>

    <integer-array name="material_colors">
        <item>@color/material_black</item>
    </integer-array>

</resources>
