<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_register_step1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_phone"
        android:layout_marginTop="40dp"
        android:hint="@string/input_phone_hint"
        android:inputType="phone"
        style="@style/RegisterTextStyle"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_marginTop="20dp"
        android:hint="@string/input_password_hint"
        android:inputType="textPassword"
        style="@style/RegisterTextStyle"/>

    <EditText
        android:id="@+id/et_password_confirm"
        android:layout_marginTop="20dp"
        android:hint="@string/input_password_hint_confirm"
        android:inputType="textPassword"
        style="@style/RegisterTextStyle"/>

    <TextView
        android:id="@+id/tv_next1"
        android:layout_marginTop="40dp"
        android:text="@string/next_step"
        style="@style/ButtonStyle" />

</LinearLayout>
