<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@id/toolbar"
        style="@style/LightToolbar"
        android:elevation="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_author"
            android:layout_marginTop="40dp"
            style="@style/AboutTextStyle"
            android:text="@string/author"/>

        <TextView
            android:id="@+id/tv_email"
            style="@style/AboutTextStyle"
            android:text="@string/email"/>

        <TextView
            android:id="@+id/tv_blog"
            style="@style/AboutTextStyle"
            android:text="@string/blog"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorAccent"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/default_version"/>

        <TextView
            android:id="@+id/tv_powered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/big_margin"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:gravity="center_horizontal"
            android:text="@string/powered"/>

    </LinearLayout>

</LinearLayout>
