<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/LightToolbar"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_phone"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <AutoCompleteTextView
            android:id="@+id/tv_phone"
            style="@style/LoginTextStyle"
            android:hint="@string/input_phone_hint"
            android:inputType="phone"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_password"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tl_phone">

        <EditText
            android:id="@+id/et_password"
            style="@style/LoginTextStyle"
            android:hint="@string/input_password_hint"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tl_password"
        android:gravity="center"
        android:background="@drawable/bg_btn_shape"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/register"
        android:textColor="@color/colorAccent"
        android:textSize="10sp"
        app:layout_constraintRight_toRightOf="@+id/tv_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_login"/>

</android.support.constraint.ConstraintLayout>
