<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@id/toolbar"
        style="@style/LightToolbar"
        android:elevation="2dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_feedback"
                style="@style/ItemRelativeStyle">

                <TextView
                    style="@style/ItemTextStyle"
                    android:text="@string/feedback" />

                <ImageView style="@style/ItemImageStyle" />

            </RelativeLayout>

            <View style="@style/DividerViewStyle" />

            <RelativeLayout
                android:id="@+id/rl_permission"
                style="@style/ItemRelativeStyle">

                <TextView
                    style="@style/ItemTextStyle"
                    android:text="@string/setting_permission" />

                <ImageView style="@style/ItemImageStyle" />

            </RelativeLayout>

            <!--<View style="@style/DividerViewStyle" />

            <TextView
                android:id="@+id/tv_cache"
                android:text="@string/cache"
                style="@style/ItemSettingTextViewStyle" />-->

            <View
                android:layout_height="20dp"
                android:background="@color/background_color"
                style="@style/DividerViewStyle" />

            <RelativeLayout
                android:id="@+id/rl_about"
                style="@style/ItemRelativeStyle">

                <TextView
                    style="@style/ItemTextStyle"
                    android:text="@string/about" />

                <ImageView style="@style/ItemImageStyle" />

            </RelativeLayout>

            <View
                android:layout_height="20dp"
                android:background="@color/background_color"
                style="@style/DividerViewStyle" />

            <TextView
                android:id="@+id/tv_sign_out"
                android:text="@string/sign_out"
                style="@style/ItemSettingTextViewStyle" />

            <View
                android:layout_height="match_parent"
                android:background="@color/background_color"
                style="@style/DividerViewStyle" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
