<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_info_container"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="120dp">

        <com.zjk.common.ui.ShapedImageView
            android:id="@+id/iv_head_photo"
            style="@style/HeadPhotoStyle"
            android:layout_height="70dp"
            android:layout_width="70dp"
            android:src="@drawable/camera"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:drawablePadding="@dimen/small_margin"
            android:text="hello"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/iv_head_photo"
            app:layout_constraintLeft_toRightOf="@id/iv_head_photo"/>

        <TextView
            android:id="@+id/tv_dynamic_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="8dp"
            android:text="132"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/iv_head_photo"
            app:layout_constraintLeft_toRightOf="@id/iv_head_photo"/>

        <TextView
            android:id="@+id/tv_dynamic_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dynamic_count"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/iv_head_photo"
            app:layout_constraintLeft_toRightOf="@id/tv_dynamic_count" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right_white_big"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/rl_sports_achievement"
        style="@style/ItemRelativeStyle"
        app:layout_constraintTop_toBottomOf="@id/cl_info_container">

        <TextView
            style="@style/ItemTextStyle"
            android:text="@string/sports_achievement" />

        <ImageView
            style="@style/ItemImageStyle" />

    </RelativeLayout>

    <View
        android:id="@+id/v_divider"
        style="@style/DividerViewStyle"
        app:layout_constraintTop_toBottomOf="@id/rl_sports_achievement"/>

    <RelativeLayout
        android:id="@+id/rl_setting"
        style="@style/ItemRelativeStyle"
        app:layout_constraintTop_toBottomOf="@id/v_divider">

        <TextView
            style="@style/ItemTextStyle"
            android:text="@string/setting" />

        <ImageView
            style="@style/ItemImageStyle" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:background="@color/background_color"
        app:layout_constraintTop_toBottomOf="@id/rl_setting"/>

</android.support.constraint.ConstraintLayout>
